# cgt-marker

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  cgt-mapping.md  concepts.md  extending.md  limitations.md
examples/: basic_ledger.py  langgraph_like_state.py  marker_aware_prompt.py
experiments/: __init__.py
experiments/marker_context_effect/: README.md  __init__.py  report.py  run_experiment.py  scenarios.json  score.py
experiments/reports/: marker_context_effect.md  marker_context_effect.summary.json  marker_context_effect_full.md  marker_context_effect_full.summary.json  marker_context_effect_v0.1.1.md  marker_context_effect_v0.1.1.summary.json
src/cgt_marker/: __init__.py
src/cgt_marker/adapters/: __init__.py  langgraph.py
src/cgt_marker/core/: __init__.py  claim.py  detector.py  evidence.py  ids.py  ledger.py  marker.py  policy.py  serialization.py  store.py  time.py  types.py  validation.py
src/cgt_marker/detectors/: __init__.py  exact_slot.py  numeric_interval.py  status.py  temporal.py
src/cgt_marker/policies/: __init__.py  marker_policy.py
src/cgt_marker/renderers/: __init__.py  markdown.py  prompt.py
src/cgt_marker/storage/: __init__.py  jsonl.py  memory.py
tests/: test_cgt_marker.py  test_experiment.py
