[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cgt-marker"
version = "0.1.0"
description = "Contradiction markers for long-running AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "K. Takahashi" }
]
keywords = ["ai-agents", "contradiction", "state", "provenance", "cgt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cgt_marker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cgt_marker", "experiments"]
